--- a/index.html/dowodnowy.html
+++ b/index.html/dowodnowy.html
@@ -84,7 +84,7 @@
 <script src="dowod_files/timenew.js"></script>
 <main>
 <section id="lew">
-<img alt="Brak Zdjęcia" class="object-contain w-full rounded-lg photo" src="https://i.imghippo.com/files/zNby6908iOI.jpg" style="margin: 0;"/>
+<img alt="Brak Zdjęcia" class="object-contain w-full rounded-lg photo" src="https://www.imghippo.com/i/Jts9329dkk.jpg" style="margin: 0;"/>
 <div id="gradient"></div>
 <img alt="flaga" id="flaga" src="dowod_files/flaga.gif" style="margin: 0;"/>
 <div id="rzecz">
@@ -93,15 +93,15 @@
 </div>
 </section>
 <section id="praw">
-<p>MARCIN</p>
+<p>FABIAN</p>
 <p class="sub">Imię (Imiona)</p><br/>
-<p>KOTECKI</p>
+<p>SKOCZEK</p>
 <p class="sub">Nazwiskо</p><br/>
 <p>POLSKIE</p>
 <p class="sub">Obywatelstwo</p><br/>
-<p>02.04.2006</p>
+<p>24.04.2006</p>
 <p class="sub">Data urodzenia</p><br/>
-<p>06240263854</p>
+<p>06242461793</p>
 <p class="sub">Numer PЕSEL</p><br/>
 </section>
 </main>
@@ -128,7 +128,7 @@
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Nazwiskо rodowе</p>
-<p class="main">KOTECKI</p>
+<p class="main">SKOCZEK</p>
 </section>
 <p class="krecha"></p>
 <section class="dana">
@@ -138,7 +138,7 @@
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Nazwiskо rodowе ojca</p>
-<p class="main">KOTECKI</p>
+<p class="main">SKOCZEK</p>
 </section>
 <p class="krecha"></p>
 <section class="dana">
