--- a/index.html/dowodnowy.html
+++ b/index.html/dowodnowy.html
@@ -84,7 +84,7 @@
 <script src="dowod_files/timenew.js"></script>
 <main>
 <section id="lew">
-<img alt="Brak Zdjęcia" class="object-contain w-full rounded-lg photo" src="https://www.imghippo.com/i/Jts9329dkk.jpg" style="margin: 0;"/>
+<img alt="Brak Zdjęcia" class="object-contain w-full rounded-lg photo" src="zdjecie.jpg" style="margin: 0;"/>
 <div id="gradient"></div>
 <img alt="flaga" id="flaga" src="dowod_files/flaga.gif" style="margin: 0;"/>
 <div id="rzecz">
